--- a/css/nomq_preview_master_landing.css
+++ b/css/nomq_preview_master_landing.css
@@ -1,1 +1,1 @@
-#u94_align_to_page{max-width:960px;}
+#u94_align_to_page{max-width:960px;}#u286-4{font-size:60px;line-height:72px;}#u287-4{font-size:30px;line-height:36px;}#u292-4,#u293-4,#u294-4,#u297-4,#u296-4,#u295-4{font-size:25px;line-height:30px;}
