--- a/css/nomq_preview_master_formal.css
+++ b/css/nomq_preview_master_formal.css
@@ -1,1 +1,1 @@
-#u344_align_to_page{max-width:960px;}#u345-4{font-size:55px;line-height:66px;}#u346-4{font-size:25px;line-height:30px;}
+#u345-4{font-size:55px;line-height:66px;}#u346-4{font-size:25px;line-height:30px;}
